kubernetes/db-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-ruby
  namespace: ruby
spec:
  selector:
    matchLabels:
      app: db-statefulset
  serviceName: db-service
  replicas: 3
  template:
    metadata:
      labels:
        app: db-statefulset
    spec:
      containers:
      - name: db-statefulset
        image: postgres:latest
        ports:
        - containerPort: 5432
        # command: ["sleep"]
        # args:
        #   - "infinity"
        volumeMounts:
          - name: data-volume
            mountPath: "/var/lib/postgresql/data" 
            subPath: postgres
      volumes:
        - name:  data-volume
          persistentVolumeClaim:
            claimName: db-pvc
