kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-deployment
  namespace: ruby
spec:
  selector:
    matchLabels:
      app: ruby-deployment
  template:
    metadata:
      labels:
        app: ruby-deployment
    spec:
      containers:
      - name: ruby-budgy
        image: tharun13055/budgy:latest
        command: [ "sh", "-c", "bin/rails db:create db:migrate && bundle exec rails s -p 3000 -b '0.0.0.0'" ]
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
