kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: ruby
spec:
  type: ClusterIP
  selector:
    app: db-statefulset
  # clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
