kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruby-service
  namespace: ruby
spec:
  selector:
    app: ruby-Deployment
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
